hotfix: fix overflowing images

--- a/styles/workshops.scss
+++ b/styles/workshops.scss
@@ -92,6 +92,7 @@ section {
 
     @media (max-width: 992px) {
       min-width: 100%;
+      width: 100%;
       min-height: 0;
       max-height: 300px;
     }
